--- a/cn/index.html
+++ b/cn/index.html
@@ -85,6 +85,12 @@
                             <i class="linecons-star"></i>
                             <span class="title">常用推荐</span>
                         </a>
+                    </li>
+                    <li>
+                        <a href="#社区资讯" class="smooth">
+                            <i class="linecons-doc"></i>
+                            <span class="title">社区资讯</span>
+                        </a>
                     </div> -->
                 </ul>
             </div>
